--- a/getting_help_in_R.Rmd
+++ b/getting_help_in_R.Rmd
@@ -5,6 +5,8 @@ author: "Ella Kaye"
 date: "October 29th, 2020"
 output:
   xaringan::moon_reader:
+    includes:
+      in_header: header.html
     seal: false
     css: [xaringan-themer.css, extra.css]
     lib_dir: libs
