Add link to talk template

--- a/getting_help_in_R.Rmd
+++ b/getting_help_in_R.Rmd
@@ -464,7 +464,7 @@ class: inverse, center, middle
 
 ---
 
-# Resources 1: Asking questions
+# Resources: Asking questions
 
 - StackOverflow guides and question on what makes a good question
   
@@ -477,7 +477,7 @@ class: inverse, center, middle
 
 ---
 
-# Resources 2: `reprex`
+# Resources: `reprex`
 
 - reprex package on tidyverse site
 
@@ -497,7 +497,7 @@ class: inverse, center, middle
 
 ---
 
-# Resources 3: `tidyverse` help 
+# Resources: `tidyverse` help 
 - tidyverse guide to getting help
 
   [http://www.tidyverse.org/help](http://www.tidyverse.org/help/)
@@ -508,7 +508,7 @@ class: inverse, center, middle
   
 ---
 
-# Resources 4: Blogposts
+# Resources: Blogposts
       
 - Common errors in R
 
@@ -522,7 +522,7 @@ class: inverse, center, middle
   
 ---
 
-# Resources 5: Slides
+# Resources: Slides
 
 - Slides made with [xaringan](https://github.com/yihui/xaringan)
 
@@ -533,6 +533,7 @@ class: inverse, center, middle
   - Body text font is **Montserrat**
   - Code font is **Fira Code**
 
+- Template available: [ellakaye/talk-template](https://github.com/EllaKaye/talk-template)
 ---
 
 class: left, end
