Add take home messages to README and slides

--- a/getting_help_in_R.Rmd
+++ b/getting_help_in_R.Rmd
@@ -536,6 +536,21 @@ class: inverse, center, middle
 - Template available: [ellakaye/emk-talks](https://github.com/EllaKaye/emk-talks)
 ---
 
+class: inverse, middle
+
+.large[
+- When faced with a question/problem, have a good look for an answer in R itself and/or online
+
+- Don't be shy to ask questions! 
+
+- Write reproducible examples
+
+- Give thought to where you ask/post your question
+
+- Give back by helping others
+]
+---
+
 class: left, end
 
 .right[# Thank you!
