--- a/getting_help_in_R.Rmd
+++ b/getting_help_in_R.Rmd
@@ -439,13 +439,15 @@ class: center, middle
   
 - **Generate content**
 
-  - blog posts
+  - blog posts ([distill](https://themockup.blog/posts/2020-08-01-building-a-blog-with-distill/), [blogdown](https://bookdown.org/yihui/blogdown/), [hugodown](https://hugodown.r-lib.org))
+  
   - Share code (e.g. [#TidyTuesday](https://twitter.com/hashtag/tidytuesday), [#FunctionFriday](https://twitter.com/hashtag/functionfriday), [gists](https://gist.github.com))
   
-- **File issues** on GitHub
 ]
 
 .pull-right[
+- **File issues** on GitHub
+
 - **Engage** in community forums
 
   - Become a mentor in the R for Data Science [community](https://www.rfordatasci.com)
